--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,8 +41,8 @@ $background-color: $oc-gray-0;
 $background-lighten-color: hsla(210, 17%, 98%, 0.42);
 
 $text-color: $base-color;
-$link-color: $oc-orange-8;
-$link-lighten-color: $oc-lime-6;
+$link-color: $oc-lime-8;
+$link-lighten-color: $oc-teal-6;
 $link-bghv-color: $oc-lime-0;
 $divider-color: $oc-gray-1;
 
