--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,8 +42,8 @@ $background-lighten-color: hsla(210, 17%, 98%, 0.42);
 
 $text-color: $base-color;
 $link-color: $oc-lime-8;
-$link-lighten-color: $oc-teal-6;
-$link-bghv-color: $oc-lime-0;
+$link-lighten-color: $oc-green-6;
+$link-bghv-color: $oc-teal-0;
 $divider-color: $oc-gray-1;
 
 $error-color:$oc-red-8;
