--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,7 +42,7 @@ $background-lighten-color: hsla(210, 17%, 98%, 0.42);
 
 $text-color: $base-color;
 $link-color: $oc-lime-8;
-$link-lighten-color: $oc-green-6;
+$link-lighten-color: $oc-blue-6;
 $link-bghv-color: $oc-teal-0;
 $divider-color: $oc-gray-1;
 
